| Bug #18115 | mysql_upgrade missing in Windows binary | ||
|---|---|---|---|
| Submitted: | 9 Mar 2006 20:20 | Modified: | 28 Apr 2006 12:47 |
| Reporter: | Markus Popp | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Packaging | Severity: | S3 (Non-critical) |
| Version: | 5.0.19, 5.1.7 | OS: | Microsoft Windows (Windows) |
| Assigned to: | Alexey Botchkov | Target Version: | |
[9 Mar 2006 20:20]
Markus Popp
[9 Mar 2006 20:58]
Markus Popp
Same for MySQL 5.1.7
[10 Mar 2006 11:46]
Miguel Solorzano
Thank you for the bug report.
[10 Mar 2006 23:32]
Kent Boortz
The current upgrade script is a Bourne shell script, i.e. not useful on Windows anyway. A solution that works for both Unix and Windows should be provided. But the WiX specification for the Windows packager in 5.0 and up is updated to include the Bourne shell script.
[10 Mar 2006 23:40]
Paul DuBois
As documented here, mysql_upgrade applies on Unix only: http://dev.mysql.com/doc/refman/5.0/en/mysql-upgrade.html The workaround is documented there, too.
[14 Mar 2006 9:17]
Reggie Burnett
We have updated the WL to reflect the new direction for mysql_upgrade. Holyfoot is working on it. https://intranet.mysql.com/worklog/Server-Sprint/?tid=2645
[18 Mar 2006 13:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3952
[28 Apr 2006 3:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5666
[28 Apr 2006 12:47]
Paul DuBois
Noted in 5.0.22, 5.1.10 changelogs that mysql_upgrade now is available generally (it's been converted from a shell script to an executable binary). Also updated upgrade and mysql_udpate sections to indicate the more general availability.
