bug #18115 (mysql_upgrade missing in Windows binary)

VC++Files/mysql.dsw:
  mysql_upgrade project added
VC++Files/mysql_ia64.dsw:
  mysql_upgrade project added
client/Makefile.am:
  mysql_upgrade programm added